@@ -47,13 +47,29 @@ class Pkg_DatacomplianceInstallerScript extends InstallerScript
 	 */
 	public function postflight(string $type, PackageAdapter $parent): bool
 	{
-		$this->setDboFromAdapter($parent);
-
 		// Do not run on uninstall.
 		if ($type === 'uninstall')
 		{
 			return true;
 		}
+
+		// Forcibly create the autoload_psr4.php file afresh.
+		if (class_exists(JNamespacePsr4Map::class))
+		{
+			try
+			{
+				$nsMap = new JNamespacePsr4Map();
+				$nsMap->create();
+				$nsMap->load();
+			}
+			catch (\Throwable $e)
+			{
+				// In case of failure, just try to delete the old autoload_psr4.php file
+				@unlink(JPATH_CACHE . '/autoload_psr4.php');
+			}
+		}
+
+		$this->setDboFromAdapter($parent);
 
 		$model = $this->getUpgradeModel();
 
