@@ -4,6 +4,7 @@ Akeeba Data Compliance 3.2.0
 ~ Joomla 5 preparation: Remove obsolete class names
 ~ Block uninstallation of child extensions
 ~ Changed the plugins' namespace
+~ Force Joomla to create its namespace map afresh at the end of installation, in case it failed to do that automatically
 # [LOW] opcache_invalidate may not invalidate a file
 
 Akeeba Data Compliance 3.1.1
